# ip-trie

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.c
.github/workflows/: build_and_test.yml
include/: CodeUtils.h  Trie.h  ip.h  ip_tool.h
src/: Trie.c  ip.c  ip_tool.c
tests/: ip_test.c  ip_test_not_initialized.c  tool_test.c  trie_test.c  trie_test.cpp
